# pgmux

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml
bench/: multi_tenant_bench.py
docs/superpowers/plans/: 2026-03-24-two-tier-proxy.md
docs/superpowers/specs/: 2026-03-24-two-tier-proxy-design.md
src/: config.rs  main.rs
src/admin/: metrics.rs  server.rs
src/monitor/: mod.rs
src/pool/: mod.rs
src/protocol/: frontend.rs  messages.rs
tests/: integration_test.rs
