[package]
name = "pg-multiplexer"
version = "0.1.0"
edition = "2021"
description = "High-performance Postgres connection multiplexer supporting unique DB/role per client"
license = "MIT"

[[bin]]
name = "pg-multiplexer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Postgres wire protocol parsing
bytes = "1"
byteorder = "1"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# HTTP / Admin dashboard
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto for auth
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.9"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Misc
dashmap = "6"
parking_lot = "0.12"
url = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
arc-swap = "1"

# For DB size checks
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = "0.5"
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio-postgres = { version = "0.7" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
