[package]
name = "pgmux"
version = "0.1.0"
edition = "2021"
description = "High-performance Postgres connection multiplexer supporting unique DB/role per client"
license = "Apache-2.0"

[[bin]]
name = "pgmux"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Postgres wire protocol parsing
bytes = "1"
postgres-protocol = "0.6"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# HTTP / Admin dashboard
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Metrics
prometheus-client = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Random (used by frontend.rs)
rand = "0.10"

# Misc
dashmap = "6"
parking_lot = "0.12"
url = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
arc-swap = "1"

# For DB size checks
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = "0.8"
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.13", features = ["json"] }
tokio-postgres = { version = "0.7" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
